# casdoor-faceid-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build-push.yml
casdoor_faceid_service/: api.py  config.py  engine.py  image.py  main.py  preload.py  service.py
tests/: test_config.py  test_preload.py  test_service.py
