[project]
name = "casdoor-faceid-service"
version = "0.1.0"
description = "Stateless UniFace-backed Face ID service for Casdoor"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
]

[project.optional-dependencies]
cpu = [
  "uniface[cpu]",
]
gpu = [
  "uniface[gpu]",
]

[project.scripts]
casdoor-faceid-service = "casdoor_faceid_service.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["casdoor_faceid_service*"]
